--- a/src/pages/Welcome.styles.css
+++ b/src/pages/Welcome.styles.css
@@ -6,5 +6,4 @@
   grid-gap: var(--grid-gap);
   margin: auto;
   width: calc(var(--question-box-witdh) * 5 + var(--grid-gap) * 4);
-  margin-top: 192px;
 }
